<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微新闻</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_guide">开始体验</string>
    <string name="btn_home">主页</string>
    <string name="rb_content_fragment_home">首页</string>
    <string name="rb_content_fragment_newscenter">新闻中心</string>
    <string name="rb_content_fragment_smartservice">智慧服务</string>
    <string name="rb_content_fragment_govaffairs">政务</string>
    <string name="rb_content_fragment_settings">设置</string>

</resources>