<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_tab_bg"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rb_content_fragment_home"
        style="@style/main_tab_style"
        android:checked="true"
        android:drawableTop="@drawable/tab_home_bg"
        android:text="@string/rb_content_fragment_home" />

    <RadioButton
        android:id="@+id/rb_content_fragment_newscenter"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/tab_newscenter_bg"
        android:text="@string/rb_content_fragment_newscenter" />

    <RadioButton
        android:id="@+id/rb_content_fragment_smartservice"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/tab_smartservice_bg"
        android:text="@string/rb_content_fragment_smartservice" />

    <RadioButton
        android:id="@+id/rb_content_fragment_govaffairs"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/tab_govaffairs_bg"
        android:text="@string/rb_content_fragment_govaffairs" />

    <RadioButton
        android:id="@+id/rb_content_fragment_settings"
        style="@style/main_tab_style"
        android:drawableTop="@drawable/tab_settings_bg"
        android:text="@string/rb_content_fragment_settings" />

</RadioGroup>